# printcraft

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/printcraft-cli/: Cargo.toml
crates/printcraft-cli/src/: main.rs
crates/printcraft-cli/src/commands/: config.rs  mod.rs  printers.rs  start.rs  status.rs
crates/printcraft-core/: Cargo.toml
crates/printcraft-core/src/: config.rs  elements.rs  error.rs  lib.rs  print_job.rs  printer.rs  queue.rs  style.rs  units.rs
crates/printcraft-platform/: Cargo.toml
crates/printcraft-platform/src/: lib.rs  trait_def.rs
crates/printcraft-platform/src/macos/: cups.rs  mod.rs  pdf_print.rs
crates/printcraft-platform/src/windows/: mod.rs  pdf_print.rs  winspool.rs
crates/printcraft-render/: Cargo.toml
crates/printcraft-render/src/: barcode.rs  html.rs  lib.rs  pdf_engine.rs  simple.rs  template.rs
crates/printcraft-server/: Cargo.toml
crates/printcraft-server/src/: autostart.rs  discovery.rs  main.rs  service.rs  tray.rs
crates/printcraft-server/src/api/: mod.rs  protocol.rs  rest.rs  static_files.rs  ws.rs
docs/: ARCHITECTURE.md  BUILD.md  CLODOP_RESEARCH.md  DESIGN.md  MIGRATION_FROM_LODOP.md  REQUIREMENTS.md  TASKS.md  WINDOWS_PRINT_DEBUG.md
installers/macos/: Info.plist
installers/windows/: installer.nsi
scripts/: build-windows.ps1
sdk/: package-lock.json  package.json  tsconfig.json  vite.config.ts
sdk/preview/: index.html
sdk/src/: connection.ts  elements.ts  index.ts  lodop.ts  style.ts
sdk/src/__tests__/: connection.test.ts  lodop.test.ts
test-page/: index.html  package.json  pnpm-lock.yaml  vite.config.js
