[package]
name = "printcraft-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PrintCraft command-line interface"

[[bin]]
name = "printcraft"
path = "src/main.rs"

[dependencies]
printcraft-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = "1"
