[package]
name = "printcraft-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PrintCraft rendering engine (PDF + HTML)"

[dependencies]
printcraft-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
printpdf = { workspace = true, features = ["embedded_images"] }
image = { workspace = true }
qrcode = { workspace = true, default-features = false }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.chromiumoxide]
version = "0.7"
optional = true

[dependencies.chromiumoxide_cdp]
version = "0.7"
optional = true

[dependencies.tokio]
workspace = true
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
chromium = ["dep:chromiumoxide", "dep:chromiumoxide_cdp", "dep:tokio", "dep:futures-util"]
